apps/bentopdf/bentopdf-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bentopdf
  namespace: toolbox
  labels:
    app.kubernetes.io/name: bentopdf
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: bentopdf
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bentopdf
    spec:
      securityContext:
        fsGroup: 101
      dnsPolicy: ClusterFirst
      containers:
        - name: bentopdf
          image: "ghcr.io/alam00000/bentopdf-simple@sha256:2659622c87719e5525ba696db108c67407b4cae33d5fdfacbfcdb19df92e4076" # 4f57cb0
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: 75m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
