apps/bentopdf/bentopdf-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bentopdf
  namespace: toolbox
  labels:
    app.kubernetes.io/name: bentopdf
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: bentopdf
